<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/welcome_screen"
        android:scaleType="centerCrop"
        android:alpha="0.75"/>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.RegisterActivity"
        tools:layout_editor_absoluteY="81dp">


        <Button
            android:id="@+id/button2"
            android:layout_width="203dp"
            android:layout_height="34dp"
            android:layout_marginBottom="16dp"
            android:background="@color/red"
            android:fontFamily="@font/capriola"
            android:onClick="register"
            android:text="@string/registerButton"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rPaswwordCheckBox" />

        <EditText
            android:id="@+id/rPasswordET"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:ems="10"
            android:fontFamily="@font/capriola"
            android:hint="@string/rPassword"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rPaswwordCheckBox"
            app:layout_constraintStart_toStartOf="@+id/rLoginET"
            app:layout_constraintTop_toBottomOf="@+id/rLoginET" />

        <EditText
            android:id="@+id/rLoginET"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="9dp"
            android:ems="10"
            android:fontFamily="@font/capriola"
            android:hint="@string/rLogin"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rPasswordET"
            app:layout_constraintStart_toStartOf="@+id/rEmailET"
            app:layout_constraintTop_toBottomOf="@+id/rEmailET" />

        <EditText
            android:id="@+id/rEmailET"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:fontFamily="@font/capriola"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rLoginET"
            app:layout_constraintStart_toStartOf="@+id/rIdNoET"
            app:layout_constraintTop_toBottomOf="@+id/rIdNoET" />

        <EditText
            android:id="@+id/rIdNoET"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:fontFamily="@font/capriola"
            android:hint="@string/dowod"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rEmailET"
            app:layout_constraintStart_toStartOf="@+id/rPhoneNoET"
            app:layout_constraintTop_toBottomOf="@+id/rPhoneNoET" />

        <EditText
            android:id="@+id/rPhoneNoET"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:fontFamily="@font/capriola"
            android:hint="@string/nrTel"
            android:inputType="phone"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rIdNoET"
            app:layout_constraintStart_toStartOf="@+id/rSurnameET"
            app:layout_constraintTop_toBottomOf="@+id/rSurnameET" />

        <EditText
            android:id="@+id/rSurnameET"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:fontFamily="@font/capriola"
            android:hint="@string/nazwisko"
            android:inputType="textCapWords"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rPhoneNoET"
            app:layout_constraintStart_toStartOf="@+id/rNameET"
            app:layout_constraintTop_toBottomOf="@+id/rNameET" />

        <EditText
            android:id="@+id/rNameET"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="11dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/capriola"
            android:hint="@string/imie"
            android:inputType="textCapWords"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rSurnameET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/rPaswwordCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="47dp"
            android:layout_marginEnd="1dp"
            android:checked="false"
            android:fontFamily="@font/capriola"
            android:onClick="passwordCheckBox"
            android:text="@string/rShowPassword"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/rPasswordET"
            app:layout_constraintTop_toBottomOf="@+id/rPasswordET" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>